Minor spacing fixes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -193,8 +193,8 @@ h6.feature-header {
 }
 
 .layer {
-  height: 40px;
-  width: 80px;
+  height: 80px;
+  width: 160px;
   opacity: 0.7;
   transform-style: preserve-3d;
   /* transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg); */
@@ -215,7 +215,7 @@ h6.feature-header {
 }
 
 .pos-1 {
-  top: 20px; 
+  top: 30px; 
 }
 
 .layer-1 {
@@ -223,7 +223,7 @@ h6.feature-header {
 }
 
 .pos-2 {
-  top: 40px;
+  top: 60px;
 }
 
 .layer-2 {
@@ -231,7 +231,7 @@ h6.feature-header {
 }
 
 .pos-3 {
-  top: 60px;
+  top: 90px;
 }
 
 .layer-3 {
@@ -248,8 +248,8 @@ h6.feature-header {
 
 .texts {
   position: absolute;
-  left: 120px;
-  margin-top: 10px;
+  left: 200px;
+  margin-top: 20px;
 }
 
 .layers:hover .pos-1, 
